# MedicaldeepLearning

./: .gitignore  README.md  pyproject.toml
Comparisons/: augmentation.ipynb  augmentation_2.ipynb  augmentation_preparation.ipynb  balancing.ipynb  models.ipynb
Computational_Limitations/: amountTest.ipynb  archive.ipynb  chestxray8.ipynb  chestxray8_applied.ipynb  epochTest.ipynb  evaluations.ipynb  evaluations_tl.ipynb  notes.md  plots.ipynb  resize_script.ipynb  resolution_new.ipynb
Computational_Limitations/pickles/: resolution_1000samples_lr0_01.pkl  resolution_1000samples_nolr.pkl
DL_for_HIN_Chest_X_Ray/: dataset_analysis.ipynb  dataset_cleaning.ipynb  medical_image_classification_notebook.ipynb
DL_for_MedMNIST/: first_test.ipynb
Niklas_First_Tests/: mnist.ipynb
