[project]
name = "MedicaldeepLearning"
version = "0.1.0"
description = "description"
authors = [
    {name = "Nio181",email = "niklas.waibel@online.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=1.23.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "tensorflow (>=2.16.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow-metal (>=1.2.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pympler (>=1.1,<2.0)",
    "tensorflow-macos (>=2.16.2,<3.0.0)",
    "pydot (>=3.0.4,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "../" }
]
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

